# Estudos-OpenGL

./: .gitattributes  CMakeLists.txt  README.md
Basico/2-Quadrado/: main.cpp
Basico/3-VertexColor/: main.cpp
Basico/4-Textura/: main.cpp
Basico/5-Transforms/: main.cpp
Basico/6-Coordenadas/: main.cpp
Basico/7-Camera/: main.cpp
Basico/Quadrado/: main.cpp
Basico/Triangulos/: main.cpp
Luz/1-CorLuz/: main.cpp
Luz/2-Fonte/: main.cpp
include/EBO/: EBO.h
include/Shader/: shaderClass.h
include/VAO/: VAO.h
include/VBO/: VBO.h
include/glad/: glad.h
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  shaderClass.cpp
src/Shaders/: LightSource.frag  LightSource.vert  default.vert  text.frag  text.vert
